<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/city_input_field"
        android:layout_width="250dp"
        android:layout_height="42dp"
        android:background="@drawable/layout_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0"
        android:layout_marginTop="15dp"
        android:hint="@string/enter_city_hint"
        android:paddingStart="5dp"
        android:inputType="text"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="18sp"
        />

    <ImageView
        android:id="@+id/search"
        android:layout_width="45dp"
        android:layout_height="42dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/layout_bg"
        android:padding="3dp"
        app:layout_constraintStart_toEndOf="@id/city_input_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="0.3"
        android:src="@drawable/search_icon"
        />

    <TextView
        android:id="@+id/forecast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:textAllCaps="true"
        android:textColor="@color/color1"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/temp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forecast"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        android:textColor="@color/color1"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/temp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        android:textColor="@color/color1"
        android:textSize="18sp"
        />


    <TextView
        android:id="@+id/city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        />


    <TextView
        android:id="@+id/humidity_text"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:text="@string/humidity"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/city"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintHorizontal_bias="0"
        android:textColor="@color/color1"
        android:textSize="18sp"
        android:textStyle="bold"
        />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:id="@+id/humidity_icon"
        android:src="@drawable/humidity_icon"
        app:layout_constraintStart_toEndOf="@id/humidity_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/city"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintHorizontal_bias="0"
        />

    <TextView
        android:id="@+id/humidity_value"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@id/humidity_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/city"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintHorizontal_bias="0.5"
        android:text="@string/dash"
        android:textColor="@color/color1"
        android:textSize="18sp"
        />


    <TextView
        android:id="@+id/min_temp_text"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/min_temperature"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/humidity_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintHorizontal_bias="0"
        android:textColor="@color/color1"
        android:textSize="18sp"
        android:textStyle="bold"
        />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:id="@+id/min_temp_icon"
        android:src="@drawable/temp_down"
        app:layout_constraintStart_toEndOf="@id/min_temp_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/humidity_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintHorizontal_bias="0"
        />

    <TextView
        android:id="@+id/min_temp_value"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@id/min_temp_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/humidity_value"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintHorizontal_bias="0.5"
        android:text="@string/dash"
        android:textColor="@color/color1"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/max_temp_text"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/max_temperature"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/min_temp_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintHorizontal_bias="0"
        android:textColor="@color/color1"
        android:textSize="18sp"
        android:textStyle="bold"
        />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:id="@+id/max_temp_icon"
        android:src="@drawable/temp_up"
        app:layout_constraintStart_toEndOf="@id/max_temp_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/min_temp_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintHorizontal_bias="0"
        />

    <TextView
        android:id="@+id/max_temp_value"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@id/max_temp_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/min_temp_value"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintHorizontal_bias="0.5"
        android:text="@string/dash"
        android:textColor="@color/color1"
        android:textSize="18sp"
        />

    <ImageView
        android:id="@+id/sunrise_icon"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:src="@drawable/sunrise"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/max_temp_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintHorizontal_bias="0.2"
        />

    <TextView
        android:id="@+id/sunrise_text"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/sunrise"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sunrise_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintHorizontal_bias="0.2"
        android:textSize="18sp"
        android:textColor="@color/color1"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/sunrise_value"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dash"
        android:textColor="@color/color1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sunrise_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintHorizontal_bias="0.2"
        android:textStyle="bold"
        />




    <ImageView
        android:id="@+id/sunset_icon"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:src="@drawable/sunset"
        app:layout_constraintStart_toEndOf="@id/sunrise_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/max_temp_value"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintHorizontal_bias="0.2"
        />

    <TextView
        android:id="@+id/sunset_text"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/sunset"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@id/sunrise_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sunset_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintHorizontal_bias="0.2"
        android:textSize="18sp"
        android:textColor="@color/color1"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/sunset_value"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dash"
        android:textColor="@color/color1"
        app:layout_constraintStart_toEndOf="@id/sunrise_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sunrise_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintHorizontal_bias="0.2"
        android:textStyle="bold"
        />

</androidx.constraintlayout.widget.ConstraintLayout>